# collect-stories

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
crates/collect-stories/: Cargo.toml
crates/collect-stories/src/: main.rs
crates/prepare-briefing/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: briefing.rs  clustering.rs  config.rs  cookies.rs  extractor.rs  io.rs  lib.rs  main.rs  models.rs  raindrop.rs  summarizer.rs
src/: briefing.rs  clustering.rs  config.rs  main.rs  raindrop.rs  summarizer.rs
