[workspace]
members = [
    "crates/collect-stories",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
dotenvy = "0.15"
html2text = "0.12"
urlencoding = "2.1"
dirs = "5.0"
